--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   fpdart: ^1.2.0
+  http: ^1.6.0
+  flutter_bloc: ^9.1.1
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
