--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.6.0
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
